Updated the Licence

--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ $secondary: #210333;
         display: flex;
     }
 
-    &--title {
+    &__top-title {
         font-size: 3rem;
         text-transform: uppercase;
         text-align: center;
