--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ body {
 
 .africons {
     display: grid;
-    border: 1px solid #ddd;
     padding: 1rem 0;
     margin: 1px;
-    grid-template-columns: repeat(6, 1fr);
-    justify-content: space-between;
+    grid-template-columns: repeat( auto-fit, minmax(150px, 1fr) );
+    align-items: center;
+    /*justify-content: space-between;*/
    
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
  i  {
-    font-size: 8rem;
+    font-size: 6rem;
 
 }
 
@@ -58,5 +58,6 @@ body {
   .title {
    font-size: 2rem;
    line-height: 2.2rem;
+   text-align: center;
   }
 }
