--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,1 +1,6 @@
+$africonsPath:   "../fons" !default;
+$borderColor:       #eee;
+$iconMuted:         #eee;
+@mixin border-radius($radius) { -webkit-border-radius: $radius; -moz-border-radius: $radius; border-radius: $radius; }
+
 $solid: #fff;
